--- a/educacion.html
+++ b/educacion.html
@@ -25,7 +25,7 @@
 				<tr>
 					<th>año</th>
 					<th>institucion</th>
-					<th>lugar/th>
+					<th>lugar</th>
 					<th>culmino</th>
 									</tr>
 			</thead>
