--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<img src="logonombre.svg">
+<img src="imagen/logonombre.svg">
 <H1>Hoja de vida</H1>
 <h2>Jose Herminio Barrientos Quispe</h2>
 <h3>8 de enero de 1986 , Lima-Perú</h3>
